# mips_emulator

./: .gitignore  CMakeLists.txt  README.md  meson.build
src/: CMakeLists.txt  main.cpp
src/Decoder/: Decoder.cpp  Decoder.h
src/Instructions/: Decoder.cpp  Decoder.h  Decoder.hpp  Instruction.h
src/Instructions/Arithmetics/: callbacks.cpp  callbacks.h  callbacks.hpp
src/Instructions/Base/: callbacks.cpp  callbacks.h  callbacks.hpp
src/Instructions/Types/: I_Instruction.cpp  I_Instruction.h  I_Instruction.hpp  Instruction.cpp  Instruction.h  J_Instruction.cpp  J_Instruction.hpp  R_Instruction.cpp  R_Instruction.h  R_Instruction.hpp
src/Istructions/: callbacks.cpp  callbacks.h
src/Memory/: Memory.cpp  Memory.h  Memory.hpp  VMA.cpp  VMA.hpp
src/Registers/: Registers.cpp  Registers.h  Registers.hpp
src/VirtualMachine/: VirtualMachine.cpp  VirtualMachine.h  VirtualMachine.hpp
test/: CMakeLists.txt  test.cpp
test/Instructions/: Arithmetic.cpp  Arithmetic.h  Arithmetic.hpp  Jump.cpp  Jump.h  Jump.hpp  Memory.cpp  Memory.h  Memory.hpp
